tests/rustdoc-ui/track-diagnostics.stderr
error[E0308]: mismatched types
  --> $DIR/track-diagnostics.rs:LL:CC
   |
LL | pub const S: A = B;
   |                  ^ expected `A`, found `B`
   |
   = note: -Ztrack-diagnostics: created at compiler/rustc_trait_selection/src/error_reporting/infer/mod.rs:LL:CC

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
